--- a/CudaEncoder.vcxproj
+++ b/CudaEncoder.vcxproj
@@ -20,12 +20,14 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
+    <UseOfMfc>false</UseOfMfc>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
+    <UseOfMfc>false</UseOfMfc>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -50,13 +52,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>d:\workspace\CUDA\poco-1.4.6p4\Foundation\include\;d:\workspace\CUDA\poco-1.4.6p4\Net\include\;C:\OPENCV\opencv\build\include;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v5.5\include;D:\workspace\CUDA\cudaEncode\CudaEncoder\include;D:\workspace\CUDA\cudaEncode\CudaEncoder\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\workspace\Lib\opencv\build\include;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v5.5\include;.\include;D:\workspace\Lib\ffmpeg-20140524-git-9722a6a-win32-dev\include;.\inc;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>d:\workspace\CUDA\poco-1.4.6p4\lib\;C:\OPENCV\opencv\build\lib\Debug;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v5.5\lib\Win32;D:\workspace\CUDA\cudaEncode\CudaEncoder\lib\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>PocoNetd.lib;PocoFoundationd.lib;cublas.lib;curand.lib;cusparse.lib;OpenCL.lib;cufft.lib;nvcuvid.lib;nvcuvenc.lib;cudart.lib;freeglut.lib;glew32.lib;cuda.lib;opencv_core248d.lib;opencv_gpu248d.lib;opencv_highgui248d.lib;opencv_imgproc248d.lib;Winmm.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>D:\workspace\Lib\ffmpeg-20140524-git-9722a6a-win32-dev\lib;D:\workspace\Lib\opencv\build\x86\vc10\lib;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v5.5\lib\Win32;.\lib\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>cublas.lib;curand.lib;cusparse.lib;OpenCL.lib;cufft.lib;nvcuvid.lib;nvcuvenc.lib;cudart.lib;freeglut.lib;glew32.lib;cuda.lib;opencv_core248d.lib;opencv_highgui248d.lib;opencv_imgproc248d.lib;opencv_core248.lib;opencv_highgui248.lib;opencv_imgproc248.lib;Winmm.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -68,21 +70,22 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>D:\workspace\Lib\opencv\build\include;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v5.5\include;.\include;D:\workspace\Lib\ffmpeg-20140524-git-9722a6a-win32-dev\include;.\inc;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalLibraryDirectories>D:\workspace\Lib\ffmpeg-20140524-git-9722a6a-win32-dev\lib;D:\workspace\Lib\opencv\build\x86\vc10\lib;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v5.5\lib\Win32;.\lib\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>cublas.lib;curand.lib;cusparse.lib;OpenCL.lib;cufft.lib;nvcuvid.lib;nvcuvenc.lib;cudart.lib;freeglut.lib;glew32.lib;cuda.lib;opencv_core248.lib;opencv_highgui248.lib;opencv_imgproc248.lib;Winmm.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Network.cpp" />
     <ClCompile Include="VideoEncoder.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Network.h" />
     <ClInclude Include="VideoEncoder.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
